# db/schema.rb
@@ -10,9 +10,35 @@
 #
 # It's strongly recommended that you check this file into your version control system.
 
-ActiveRecord::Schema[8.0].define(version: 2025_08_01_182913) do
+ActiveRecord::Schema[8.0].define(version: 2025_08_03_062904) do
   # These are extensions that must be enabled in order to support this database
   enable_extension "pg_catalog.plpgsql"
+
+  create_table "chat_sessions", force: :cascade do |t|
+    t.string "name"
+    t.text "desc"
+    t.string "external_id"
+    t.json "meta_data"
+    t.datetime "last_used_at"
+    t.bigint "chatgpt_id", null: false
+    t.bigint "workspace_id", null: false
+    t.datetime "created_at", null: false
+    t.datetime "updated_at", null: false
+    t.index ["chatgpt_id"], name: "index_chat_sessions_on_chatgpt_id"
+    t.index ["workspace_id"], name: "index_chat_sessions_on_workspace_id"
+  end
+
+  create_table "chatgpts", force: :cascade do |t|
+    t.string "name"
+    t.text "desc"
+    t.string "auth_token"
+    t.json "meta_data"
+    t.datetime "last_used_at"
+    t.bigint "workspace_id", null: false
+    t.datetime "created_at", null: false
+    t.datetime "updated_at", null: false
+    t.index ["workspace_id"], name: "index_chatgpts_on_workspace_id"
+  end
 
   create_table "scrapping_tables", force: :cascade do |t|
     t.string "source_type_key"
@@ -55,6 +81,9 @@ ActiveRecord::Schema[8.0].define(version: 2025_08_01_182913) do
     t.index ["user_id"], name: "index_workspaces_on_user_id"
   end
 
+  add_foreign_key "chat_sessions", "chatgpts"
+  add_foreign_key "chat_sessions", "workspaces"
+  add_foreign_key "chatgpts", "workspaces"
   add_foreign_key "scrapping_tables", "workspaces"
   add_foreign_key "user_bookmarks", "users"
   add_foreign_key "workspaces", "users"
